@@ -9,7 +9,7 @@
     <description>Rocketmq Event Chain</description>
     <packaging>jar</packaging>
 
-    <!-- 开源协议采用 Apache 2.0 协议 -->
+    
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
@@ -17,7 +17,7 @@
         </license>
     </licenses>
 
-    <!-- 源码仓库（SCM）信息 -->
+    
     <scm>
         <connection>scm:git:https://github.com/easy-4-java/${project.artifactId}.git</connection>
         <developerConnection>scm:git:https://github.com/easy-4-java/${project.artifactId}.git</developerConnection>
@@ -25,7 +25,7 @@
         <tag>${project.artifactId}</tag>
     </scm>
 
-    <!-- 开发者信息 -->
+    
     <developers>
         <developer>
             <name>Loong Wan</name>
@@ -38,7 +38,7 @@
         </developer>
     </developers>
 
-    <!-- 制品发布仓库配置（distributionManagement） -->
+    
     <distributionManagement>
         <repository>
             <id>2624322-release-6F6h6R</id>
@@ -50,31 +50,30 @@
         </snapshotRepository>
     </distributionManagement>
 
-    <!-- 构建配置（Build） -->
+    
     <build>
         <pluginManagement>
             <plugins>
 
-                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+                
                 <plugin>
-                    <!-- 编译插件：编译主代码至主输出目录 -->
+                    
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.6.1</version>
                     <configuration>
+                        <release>${java.version}</release>
                         <defaultLibBundleDir>lib</defaultLibBundleDir>
-                        <source>21</source>
-                        <target>21</target>
-                        <!-- 字符集编码 -->
+                        
                         <encoding>${project.build.sourceEncoding}</encoding>
-                        <!-- 编译最大内存 -->
+                        
                         <maxmem>512M</maxmem>
                     </configuration>
                 </plugin>
 
-                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-resources-plugin -->
+                
                 <plugin>
-                    <!-- 资源插件：复制主资源文件至主输出目录 -->
+                    
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
                     <version>3.0.1</version>
@@ -100,7 +99,7 @@
                     </executions>
                 </plugin>
 
-                <!-- https://mvnrepository.com/artifact/org.codehaus.mojo/findbugs-maven-plugin -->
+                
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>findbugs-maven-plugin</artifactId>
@@ -115,17 +114,17 @@
                     </executions>
                 </plugin>
 
-                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
+                
                 <plugin>
-                    <!-- 单元测试插件：执行测试用例 -->
+                    
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.19.1</version>
+                    <version>3.5.2</version>
                     <configuration>
-                        <skip>true</skip>
-                        <skipTests>true</skipTests>
+                        <skip>false</skip>
+                        <skipTests>false</skipTests>
                         <forkMode>once</forkMode>
-                        <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m -Dfile.encoding=UTF-8</argLine>
+                        <argLine>-Xmx1024m   -Dfile.encoding=UTF-8</argLine>
                         <additionalClasspathElements>
                             <additionalClasspathElement>${basedir}/target/test-classes</additionalClasspathElement>
                         </additionalClasspathElements>
@@ -138,9 +137,9 @@
                     </configuration>
                 </plugin>
 
-                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
+                
                 <plugin>
-                    <!-- jar 包生成插件：创建项目 jar 包 -->
+                    
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>3.0.2</version>
@@ -156,25 +155,25 @@
                     </configuration>
                 </plugin>
 
-                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-install-plugin -->
+                
                 <plugin>
-                    <!-- 安装插件：将项目输出构件安装到本地仓库 -->
+                    
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-install-plugin</artifactId>
                     <version>2.5.2</version>
                 </plugin>
 
-                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-deploy-plugin -->
+                
                 <plugin>
-                    <!-- 发布插件：将项目输出构件部署到远程仓库 -->
+                    
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>2.8.2</version>
                 </plugin>
 
-                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-source-plugin -->
+                
                 <plugin>
-                    <!-- 源码插件：发布时自动将源码同时发布 -->
+                    
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
                     <version>3.0.1</version>
@@ -194,9 +193,9 @@
                     </executions>
                 </plugin>
 
-                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
+                
                 <plugin>
-                    <!-- 文档插件：发布时自动生成 Javadoc 并发布 -->
+                    
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>2.10.4</version>
@@ -221,9 +220,9 @@
         </pluginManagement>
         <plugins>
 
-            <!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
+            
             <plugin>
-                <!-- 覆盖率插件：生成覆盖率报告并校验测试覆盖率（目标 90%） -->
+                
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>${jacoco-maven-plugin.version}</version>
@@ -266,18 +265,17 @@
                 </executions>
             </plugin>
 
-            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+            
             <plugin>
-                <!-- 编译插件：编译主代码至主输出目录 -->
+                
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <!-- 源代码编译版本 -->
-                    <source>${java.version}</source>
-                    <!-- 目标平台编译版本 -->
-                    <target>${java.version}</target>
-                    <!-- 保留方法参数名，支持 Spring MVC 按参数名绑定 -->
+                    <release>${java.version}</release>
+                        
+                    
+                    
                     <parameters>true</parameters>
                     <encoding>${project.build.sourceEncoding}</encoding>
                     <maxmem>512M</maxmem>
@@ -293,14 +291,14 @@
         </plugins>
     </build>
 
-    <!-- 版本属性定义：Java 版本、依赖版本与 Maven 插件版本统一管理 -->
+    
     <properties>
         <central-publishing-maven-plugin.version>0.11.0</central-publishing-maven-plugin.version>
-        <!-- Maven Plugin versions -->
+        
         <maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
         <maven-source-plugin.version>3.4.0</maven-source-plugin.version>
         <maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
-        <!-- Dependency versions -->
+        
         <lombok.version>1.18.46</lombok.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>21</java.version>
@@ -314,66 +312,66 @@
         <spring.version>4.3.11.RELEASE</spring.version>
         <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
         <jacoco-maven-plugin.version>0.8.15</jacoco-maven-plugin.version>
-    </properties>
+    <maven.compiler.release>${java.version}</maven.compiler.release><maven-jacoco-plugin.version>0.8.15</maven-jacoco-plugin.version><maven-central-publishing-plugin.version>0.11.0</maven-central-publishing-plugin.version></properties>
 
-    <!-- 依赖版本统一管理（dependencyManagement） -->
+    
     <dependencyManagement>
         <dependencies>
-            <!-- For Junit -->
+            
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
             </dependency>
-            <!-- For Servlet Api -->
+            
             <dependency>
                 <groupId>javax.servlet</groupId>
                 <artifactId>javax.servlet-api</artifactId>
                 <version>${servlet-api.version}</version>
             </dependency>
-            <!-- For Slf4j -->
+            
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>${slf4j.version}</version>
             </dependency>
-            <!-- For RocketMQ -->
+            
             <dependency>
                 <groupId>org.apache.rocketmq</groupId>
                 <artifactId>rocketmq-client</artifactId>
                 <version>${rocketmq.version}</version>
             </dependency>
-            <!-- For RocketMQ -->
+            
             <dependency>
                 <groupId>org.apache.rocketmq</groupId>
                 <artifactId>rocketmq-common</artifactId>
                 <version>${rocketmq.version}</version>
             </dependency>
-            <!-- For Spring Framework -->
+            
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-beans</artifactId>
                 <version>${spring.version}</version>
             </dependency>
-            <!-- For Spring Framework -->
+            
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
                 <version>${spring.version}</version>
             </dependency>
-            <!-- For Spring Framework -->
+            
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
                 <version>${spring.version}</version>
             </dependency>
-            <!-- https://mvnrepository.com/artifact/${project.groupId}/disruptor-biz -->
+            
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>disruptor-biz</artifactId>
                 <version>${disruptor-biz.version}</version>
             </dependency>
-            <!-- For Lombok -->
+            
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
@@ -383,57 +381,57 @@
         </dependencies>
     </dependencyManagement>
 
-    <!-- 项目依赖（dependencies） -->
+    
     <dependencies>
-        <!-- For Junit -->
+        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-        <!-- For Slf4j -->
+        
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <scope>provided</scope>
         </dependency>
-        <!-- For Servlet Api -->
+        
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
-        <!-- For RocketMQ -->
+        
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-client</artifactId>
         </dependency>
-        <!-- For RocketMQ -->
+        
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-common</artifactId>
         </dependency>
-        <!-- For Spring Framework -->
+        
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
         </dependency>
-        <!-- For Spring Framework -->
+        
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
-        <!-- For Spring Framework -->
+        
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/${project.groupId}/disruptor-biz -->
+        
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>disruptor-biz</artifactId>
         </dependency>
-        <!-- For Lombok -->
+        
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -441,18 +439,18 @@
         </dependency>
     </dependencies>
 
-    <!-- 构建 Profile 配置 -->
+    
     <profiles>
-        <!-- 发布到 Maven Central Portal：mvn -Pcentral deploy（GPG 签名 + 源码 + Javadoc + Central 发布插件） -->
+        
 
         <profile>
             <id>central</id>
             <build>
                 <plugins>
 
-                    <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-gpg-plugin -->
+                    
                     <plugin>
-                        <!-- 签名插件：对制品进行 PGP 签名 -->
+                        
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
                         <version>${maven-gpg-plugin.version}</version>
@@ -467,9 +465,9 @@
                         </executions>
                     </plugin>
 
-                    <!-- https://mvnrepository.com/artifact/org.sonatype.central/central-publishing-maven-plugin -->
+                    
                     <plugin>
-                        <!-- 发布插件：将制品发布到 Maven Central Portal -->
+                        
                         <groupId>org.sonatype.central</groupId>
                         <artifactId>central-publishing-maven-plugin</artifactId>
                         <version>${central-publishing-maven-plugin.version}</version>
